add more skills

--- a/portfolio/Base/templates/home.html
+++ b/portfolio/Base/templates/home.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    <title>Portfolio</title>
+    <title>mero profile</title>
   </head>
   <body>
     <!-- Navbar Section -->
@@ -116,6 +116,38 @@
             <img src="{% static 'images/gitgithub.webp' %}" alt="git logo" />
             <span>Git and Github</span>
           </div>
+
+          <div class="cell">
+            <img src="{% static 'images/drf.png' %}" alt="drf logo" />
+            <span>Django Rest Framework</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/insomnia.jpg' %}" alt="insomnia logo" />
+            <span>Insomnia</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/node.js' %}" alt="nodejs logo" />
+            <span>Node.js</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/MySQL.png' %}" alt="mysql logo" />
+            <span>MySQL</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/mongo.jpg' %}" alt="mongo logo" />
+            <span>MongoDB</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/boot.png' %}" alt="bootstrap logo" />
+            <span>Bootstrap</span>
+          </div>
+          
+          
         </div>
       </section>
 
