add resume part in navbar section

--- a/portfolio/Base/templates/home.html
+++ b/portfolio/Base/templates/home.html
@@ -45,9 +45,13 @@
             <span>Email</span>
           </a>
 
-        <a href="{% static 'pdf/sql.pdf' %}" target="_blank"><button class="btn poppins">Resume</button></a>
+          <a href="{% static 'pdf/Umesh-Tamang-cv.pdf' %}" target="_blank" rel="noopener noreferrer" style="background-color: rgba(0, 0, 0, 0.7); color: white; font-size: medium; padding: 2px; border-radius: 2px; display: inline-block;">
+            <i class="fa-solid fa-file-alt"></i>
+            <span>Resume</span>
+        </a>
       </div>
     </nav>
+    
 
     <main>
       <!-- Home section -->
