--- a/portfolio/Base/templates/home.html
+++ b/portfolio/Base/templates/home.html
@@ -35,17 +35,13 @@
           <span>Linkedin</span>
         </a>
 
-        {% comment %} <a href="umeshtamang129@gmail.com">
-          <i class="fa-solid fa-envelope"></i>
-          <span>Email</span>
-        </a> {% endcomment %}
-
+{% comment %} 
         <a href="mailto:umeshtamang129@gmail.com">
             <i class="fa-solid fa-envelope"></i>
             <span>Email</span>
-          </a>
+          </a> {% endcomment %}
 
-          <a href="{% static 'pdf/Umesh-Tamang-cv.pdf' %}" target="_blank" rel="noopener noreferrer" style="background-color: rgba(0, 0, 0, 0.7); color: white; font-size: medium; padding: 2px; border-radius: 2px; display: inline-block;">
+          <a href="{% static 'pdf/CV.pdf' %}" target="_blank" rel="noopener noreferrer" style="background-color: rgba(0, 0, 0, 0.7); color: white; font-size: medium; padding: 2px; border-radius: 2px; display: inline-block;">
             <i class="fa-solid fa-file-alt"></i>
             <span>Resume</span>
         </a>
