--- a/portfolio/Base/templates/home.html
+++ b/portfolio/Base/templates/home.html
@@ -54,7 +54,7 @@
 
       <section class="hero-section">
         <div class="text">
-          <h2>Hi, I'm Umesh 👋</h2>
+          <h2>Hi, I'm Umesh </h2>
           <p>I am passionate about Backend Development.Continuously expanding my knowledge and skills through self-learning.</p>
 
           <div class="links">
@@ -79,67 +79,72 @@
 
       <section id="skills" class="skills-section">
         <h2>Skills</h2>
-        <div class="text">Let's see my skills</div>
+        <!-- <div class="text">Let's see my skills</div> -->
 
         <div class="cells">
           <div class="cell">
-            <img src="{% static 'images/html.webp' %}" alt="html logo" />
-            <span>HTML</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/css.jpg' %}" alt="css logo" />
-            <span>CSS</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/js.png' %}" alt="javascript logo" />
-            <span>JavaScript</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/python.jpg' %}" alt="python logo" />
+            <img src="{% static 'images/python.jpg' %}" alt="html logo" />
             <span>Python</span>
           </div>
 
           <div class="cell">
-            <img src="{% static 'images/django.png' %}" alt="django logo" />
+            <img src="{% static 'images/django.png' %}" alt="css logo" />
             <span>Django</span>
           </div>
 
           <div class="cell">
-            <img src="{% static 'images/sql.webp' %}" alt="sql logo" />
-            <span>SQL</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/gitgithub.webp' %}" alt="git logo" />
-            <span>Git and Github</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/drf.png' %}" alt="drf logo" />
+            <img src="{% static 'images/drf.png' %}" alt="javascript logo" />
             <span>Django Rest Framework</span>
           </div>
 
           <div class="cell">
-            <img src="{% static 'images/insomnia.jpg' %}" alt="insomnia logo" />
-            <span>Insomnia</span>
+            <img src="{% static 'images/sql.webp' %}" alt="python logo" />
+            <span>SQL</span>
           </div>
 
           <div class="cell">
-            <img src="{% static 'images/node.js' %}" alt="nodejs logo" />
-            <span>Node.js</span>
-          </div>
-
-          <div class="cell">
-            <img src="{% static 'images/MySQL.png' %}" alt="mysql logo" />
+            <img src="{% static 'images/mysql.png' %}" alt="django logo" />
             <span>MySQL</span>
           </div>
 
           <div class="cell">
-            <img src="{% static 'images/mongo.jpg' %}" alt="mongo logo" />
-            <span>MongoDB</span>
+            <img src="{% static 'images/postman.png' %}" alt="sql logo" />
+            <span>Postman</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/insomnia.jpg' %}" alt="git logo" />
+            <span>Insomnia</span>
+          </div>
+
+          <!-- <div class="cell">
+            <img src="{% static 'images/drf.png' %}" alt="drf logo" />
+            <span>Django Rest Framework</span>
+          </div> -->
+
+          <!-- <div class="cell">
+            <img src="{% static 'images/insomnia.jpg' %}" alt="insomnia logo" />
+            <span>Insomnia</span>
+          </div> -->
+
+          <div class="cell">
+            <img src="{% static 'images/gitgithub.jpg' %}" alt="nodejs logo" />
+            <span>Git and Github </span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/html.webp' %}" alt="mysql logo" />
+            <span>HTML</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/css.jpg' %}" alt="mongo logo" />
+            <span>CSS</span>
+          </div>
+
+          <div class="cell">
+            <img src="{% static 'images/js.png' %}" alt="bootstrap logo" />
+            <span>JavaScript</span>
           </div>
 
           <div class="cell">
