--- a/templates/index.html
+++ b/templates/index.html
@@ -73,13 +73,16 @@
       <h2>About</h2>
         <div class="common-container">
           <h4><i class="fas fa-graduation-cap"></i> Education</h4>
-          <p>Bachelor in Computer Application at Kathmandu College of Technology (8th semester)</p>
+          <p>Bachelor in Computer Application at Kathmandu College of Technology </p>
+          <p>2020 Batch   </p>
         </div>
       </div>
       <p>
-        I am passionate about Backend Developer. Continuously expanding my knowledge and skills through
-        self-learning. Let's connect and create innovative solutions together.
+       Enthusiastic IT student with a passion for backend development, experienced in Python
+Django, REST APIs, and database concepts. 
       </p>
+      <p> Continuously expanding my knowledge and 
+skills through self-learning. Let's connect and create innovative solutions together. </p>
     </section>
 
     <section id="skills">
