--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,13 @@
     <title>Umesh Tamang - IT Student </title>
     <link
       rel="icon"
-      href="{% static 'favicon-32x32.png' %}"
+      href=""
       type="image/png"
       sizes="32x32"
     />
     <link
       rel="icon"
-      href="{% static 'favicon-16x16.png' %}"
+      href=""
       type="image/png"
       sizes="16x16"
     />
@@ -164,9 +164,6 @@ skills through self-learning. Let's connect and create innovative solutions toge
     <section id="contact">
       <h2>Contact</h2>
       <div class="container">
-        <a href="mailto:umeshtamang129@gmail.com" class="btn" aria-label="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
         <a href="https://www.linkedin.com/in/umesh-tamang-a44043272/" target="_blank" class="btn" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
