--- a/assets/style.css
+++ b/assets/style.css
@@ -374,8 +374,9 @@ nav {
 
 .project-container img {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
+  max-height: 350px;
+  height: auto;
+  object-fit: contain;
   transition: var(--transition);
 }
 
@@ -560,6 +561,10 @@ footer {
 
   #contact .container {
     flex-wrap: wrap;
+  }
+
+  .project-container img {
+    max-height: 220px;
   }
 }
 
