--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
       <h1>Umesh Tamang</h1>
       <h2>IT Student</h2>
       <span>
-        <a href="{% static 'cv_umeshtamang.pdf' %}" download class="btn">
+        <a href="{% static 'CV.pdf' %}" download class="btn">
           <i class="fas fa-download"></i> Download CV
         </a>
         <a href="#contact" class="btn">
@@ -78,8 +78,8 @@
         </div>
       </div>
       <p>
-       Enthusiastic IT student with a passion for backend development, experienced in Python
-Django, REST APIs, and database concepts. 
+       Enthusiastic IT student passionate about full stack development. Skilled in Python, Django, REST APIs (DRF), and 
+database design (SQL, MySQL, PostgreSQL), HTML, CSS, JS, React (basic), Git/GitHub and Postman.
       </p>
       <p> Continuously expanding my knowledge and 
 skills through self-learning. Let's connect and create innovative solutions together. </p>
